--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -30,10 +30,24 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build backend image
-        run: |
-          docker build ./backend -t ghcr.io/${{ github.repository }}/backend:${{ github.event.inputs.tag || 'latest' }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-      - name: Build frontend image
-        run: |
-          docker build ./frontend -t ghcr.io/${{ github.repository }}/frontend:${{ github.event.inputs.tag || 'latest' }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push backend Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          file: './backend/Dockerfile'
+          tags: ghcr.io/${{ github.repository }}/asangin/stock-application/backend:${{ github.event.inputs.tag || 'latest' }}
+
+      - name: Build and push frontend Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          file: './frontend/Dockerfile'
+          tags: ghcr.io/${{ github.repository }}/asangin/stock-application/frontend:${{ github.event.inputs.tag || 'latest' }}
